--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,14 +4,22 @@
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
+        <form class="new-user" action="POST">
           <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+            <label for="user-name">user-name</label>
+            <input type="text" id="user-name" class="form-control" aria-describedby="user-name" placeholder="user-name">
           </div>
           <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+            <label for="user-email">user-email</label>
+            <input type="text" id="user-email" class="form-control" aria-describedby="user-email" placeholder="user-email">
+          </div>
+          <div class="form-group">
+            <label for="user-password">user-password</label>
+            <input type="text" id="user-password" class="form-control" aria-describedby="user-password" placeholder="user-password">
+          </div>
+          <div class="form-group">
+            <label for="user-communities">user-communities</label>
+            <input type="text" id="user-communities" class="form-control" aria-describedby="user-communities" placeholder="user-communities">
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
