--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,10 @@
         <h2>This is our Home Page!</h2>
         <form class="new-user" action="POST">
           <div class="form-group">
+            <label for="user-url">user-url</label>
+            <input type="text" id="user-url" class="form-control" aria-describedby="user-url" placeholder="user-url">
+          </div>
+          <div class="form-group">
             <label for="user-name">user-name</label>
             <input type="text" id="user-name" class="form-control" aria-describedby="user-name" placeholder="user-name">
           </div>
@@ -23,6 +27,31 @@
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
+
+        <form class="new-pet" action="POST">
+          <div class="form-group">
+            <label for="pet-user">pet-user</label>
+            <input type="text" id="pet-user" class="form-control" aria-describedby="pet-user" placeholder="pet-user">
+          </div>
+          <div class="form-group">
+            <label for="pet-name">pet-name</label>
+            <input type="text" id="pet-name" class="form-control" aria-describedby="pet-name" placeholder="pet-name">
+          </div>
+          <div class="form-group">
+            <label for="pet-species">pet-species</label>
+            <input type="text" id="pet-species" class="form-control" aria-describedby="pet-species" placeholder="pet-species">
+          </div>
+          <div class="form-group">
+            <label for="pet-age">pet-age</label>
+            <input type="text" id="pet-age" class="form-control" aria-describedby="pet-age" placeholder="pet-age">
+          </div>
+          <div class="form-group">
+            <label for="pet-profPic">pet-profPic</label>
+            <input type="text" id="pet-profPic" class="form-control" aria-describedby="pet-profPic" placeholder="pet-profPic">
+          </div>
+          <button id="submit2" class="btn btn-primary float-right">Submit2</button>
+        </form>
+
         <h3>Examples:</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
