Add HTML routes for pages: community(index), signup, login, user, pet

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,10 +21,6 @@
             <label for="user-password">user-password</label>
             <input type="text" id="user-password" class="form-control" aria-describedby="user-password" placeholder="user-password">
           </div>
-          <div class="form-group">
-            <label for="user-communities">user-communities</label>
-            <input type="text" id="user-communities" class="form-control" aria-describedby="user-communities" placeholder="user-communities">
-          </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
 
@@ -67,4 +63,4 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/public/assets/js/index.js"></script>
