--- a/views/pet.handlebars
+++ b/views/pet.handlebars
@@ -17,7 +17,7 @@
             <strong>Description:</strong> {{pet.age}}</p>
           <p>
             <strong>Description:</strong> {{pet.profPic}}</p>
-            <a href="/index">← Back To Test Page</a>
+            <a href="/index2">← Back To Test Page</a>
         </div>
       </div>
     </div>
