--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,6 +12,13 @@ body {
     text-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 
+
+.box-shadow {
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+
+
 .remove-mb {
     margin-bottom: -15px;
 }
