Routing for user/# and pet/# working with userprofile.handlebars and petprofile.handlebars. Switched root file to static home-page.html (not dynamic yet).

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -8,15 +8,15 @@
             <strong>ID</strong>: {{user.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{user.userPhotoUrl}}</p>
+            <strong>Photo URL</strong>: {{user.userPhotoUrl}}</p>
           <p>
-            <strong>Text</strong>: {{user.name}}</p>
+            <strong>Name</strong>: {{user.name}}</p>
           <p>
-            <strong>Description:</strong> {{user.email}}</p>
+            <strong>Email:</strong> {{user.email}}</p>
           <p>
-            <strong>Description:</strong> {{user.password}}</p>
+            <strong>Password:</strong> {{user.password}}</p>
           <p>
-            <strong>Description:</strong> {{user.email}}</p>
+            <strong>Email:</strong> {{user.email}}</p>
             <a href="/index">← Back To Test Page</a>
         </div>
       </div>
