--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -69,7 +69,7 @@
           </div>
           <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
             <h2>{{user.name}} <small class="ml-2"><small>{{user.location}}</small></small></h2>
-            <p> {{user.description}} </p>
+            <p> {{user.bio}} </p>
           </div>
         </div>
       </div>
