User Page - Pet section handlebars partial populating working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -109,6 +109,9 @@
       url: 'https://demos.creative-tim.com/material-kit/index.html'
       });
   });
+
+    console.log('hi');
+    
 </script>
 
 </html>
