petprofile.handlebars fully functional

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -103,13 +103,12 @@
         <div class="row">
           <div id="pets-container">
             {{#each user.Pets}}
-              {{!-- name: {{user.Pets.[0].name}} --}}
               {{> pets/pet-block}}
             {{/each}}
           </div>
-          <div class="fix-to-bottom">
+          {{!-- <div class="fix-to-bottom">
             <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
-          </div>
+          </div> --}}
         </div>
       </div>
 
@@ -127,7 +126,46 @@
       <div class="tab-pane text-center gallery col-lg-10 mx-auto" id="favorite">
           <div class="row">
             <div id="favorites-container">
-              favorites-container
+              <div class="col-lg-10 mx-auto">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://66.media.tumblr.com/45a28fbddc5b75da42ddc8674002399f/tumblr_osip4zQBfe1qh6pbfo1_1280.jpg" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/2d36e011323a4a3dcbb17bef942ba2bc.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/05863dfeaa07e2512e43f05a6410cf88.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/029cfbdf0b5edc1d9ad73aec40713fe5.jpg" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/9417df045186cade42d801ee0162d337.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/ac3172e2d2053bdc4f76f1ad7e5423c2.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/53bbfe113fbd7e8121aeab5b02f5c280.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/2b9dfb9eb6e31690f1dc4f763a37883a.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/1b9115974b4ca391c88d87568cbad7cc.jpg" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/a81c1daeec39faca9f9f2536848f1748.jpg" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/ce287212562dd9fc571254fb676e94cb.png" style="width: 100%">
+                  </div>
+                  <div class="col-md-3">
+                    <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/443c80a5548633b65c03a4219a5813a2.png" style="width: 100%">
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="fix-to-bottom">
               <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
