--- a/views/petprofile.handlebars
+++ b/views/petprofile.handlebars
@@ -88,7 +88,9 @@
         <div class="row">
           <div class="col-lg-11 mx-auto">
             <div id="photos-container">
-              photos-container
+              {{#each pets.PetPhotos}}
+                {{> petPhotos/petPhoto-block}}
+              {{/each}}
             </div>
             <div class="fix-to-bottom">
               <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
