--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -1,17 +1,321 @@
-<div class="container">
-  <div class="row">
-    <div class="col-8 offset-2">
-      <div class="card mt-4">
-        <div class="card-body">
-          <h5 class="card-title">Comm</h5>
-          <p>
-            <strong>ID</strong>: {{comm.id}}</p>
-          <p>
-          <p>
-            <strong>Text</strong>: {{comm.name}}</p>
-            <a href="/index3">← Back To Test Page</a>
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+    <div class="container">
+      <div class="navbar-translate">
+        <a class="navbar-brand font-pacifico" href="#"> <i class="fas fa-paw"></i>
+          Petstagram </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="dropdown nav-item">
+            <a href="./user-page.html" class="nav-link">
+              <i class="material-icons">face</i> My Profile
+            </a>
+          </li>
+          <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              <i class="material-icons">pets</i> My Pets
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href="#" class="dropdown-item">
+                Pet 1
+              </a>
+              <a href="#" class="dropdown-item">
+                Pet 2
+              </a>
+            </div>
+          </li>
+          <li class="dropdown nav-item">
+            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              <i class="material-icons">group_work</i> My Communities
+            </a>
+            <div class="dropdown-menu dropdown-with-icons">
+              <a href="#" class="dropdown-item">
+                Community 1
+              </a>
+              <a href="#" class="dropdown-item">
+                Community 2
+              </a>
+              <a href="#" class="dropdown-item">
+                Community 3
+              </a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./login-page.html">
+                <i class="fas fa-sign-out-alt"></i> Sign Out
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="main main-raised top-margin bottom-margin">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
+              <img class="mb-3 rounded-circle border border-purple" src="https://www.bterrier.com/wp-content/uploads/2012/12/dog-in-hand-with-knit-frog-hat.jpg" style="width: 100%; border-width: 4px !important;">
+              <a href="#pablo" class="btn btn-primary mr-3"><i class="fa fa-envelope"></i></a>
+              <a href="#pablo" class="btn btn-primary"><i class="fa fa-address-card"></i></a>
+              <a href="#pablo" class="btn btn-primary"><i class="fas fa-user-plus"></i></a>
+            </div>
+            <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
+              <h2>{{comm.name}}<small class="ml-2"><small>{{comm.location}}</small></small></h2>
+              <p>{{comm.bio}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 ml-auto mr-auto">
+          <div class="profile-tabs mb-3">
+            <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link" href="#members" role="tab" data-toggle="tab">
+                  <i class="material-icons">group</i> Members
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#message-board" role="tab" data-toggle="tab">
+                  <i class="material-icons">message</i> Message Board
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#photos" role="tab" data-toggle="tab">
+                  <i class="material-icons">photo_library</i> Photos
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="tab-content tab-space">
+        <div class="tab-pane text-center gallery col-lg-10 mx-auto" id="members">
+          <div class="row">
+            <div class="col-md-3 mx-auto my-auto">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Jessica M.">
+                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/avatar.jpg" style="width: 100%">
+              </a>
+            </div>
+            <div class="col-md-3 mx-auto my-auto">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Elizabeth O.">
+                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/camp.jpg" style="width: 100%">
+              </a>
+            </div>
+            <div class="col-md-3 mx-auto my-auto">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="John S.">
+                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/card-profile1-square.jpg" style="width: 100%">
+              </a>
+            </div>
+            <div class="col-md-3 mx-auto my-auto">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Randal L.">
+                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/card-profile2-square.jpg" style="width: 100%">
+              </a>
+            </div>
+            <div class="col-md-3 mx-auto my-auto">
+              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Christian A.">
+                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/christian.jpg" style="width: 100%">
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane active text-center gallery" id="message-board">
+          <div class="row">
+            <div class="col-lg-10 mx-auto remove-mt">
+              <div class="card border border-purple rounded">
+                <div class="card-body">
+                  <div class="md-form form-group text-left remove-mt">
+                    <label for="form10" class="bmd-label-floating">Write a new message...</label>
+                    <textarea type="text" id="form10" class="md-textarea form-control" rows="3"></textarea>
+                    <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
+                      <i class="material-icons">insert_photo</i>
+                    </button>
+                    <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
+                      <i class="material-icons">insert_drive_file</i>
+                    </button>
+                    <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
+                      <i class="material-icons">insert_invitation</i>
+                    </button>
+                    <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
+                      <i class="material-icons">insert_emoticon</i>
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-raised btn-round float-right">
+                      <i class="material-icons mr-1">insert_comment</i> Submit
+                    </button>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item border rounded mt-3">
+                      <div class="col-lg-7 text-left">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu consectetur massa. Phasellus nec velit semper libero commodo vulputate quis sit amet orci. Integer vitae mi lacus. Morbi semper pretium nunc, condimentum pretium metus laoreet ut.
+                      </div>
+                      <div class="col-lg-4 text-right ml-auto">
+                        John Smith <small>30 minutes ago</small>
+                      </div>
+                    </li>
+                    <li class="list-group-item border rounded mt-3">
+                      <div class="col-lg-7 text-left">
+                        Nam at est euismod justo tincidunt sagittis sit amet eget massa. Suspendisse cursus diam sem, quis cursus neque cursus et. Aliquam euismod nulla id libero accumsan, et ullamcorper odio pulvinar. Etiam aliquet urna non tellus mollis condimentum. Donec porttitor rutrum ligula nec tristique.
+                      </div>
+                      <div class="col-lg-4 text-right ml-auto">
+                        Jane Doe <small>45 minutes ago</small>
+                      </div>
+                    </li>
+                    <li class="list-group-item border rounded mt-3">
+                      <div class="col-lg-7 text-left">
+                        Aenean bibendum metus sit amet libero imperdiet, in aliquet mi blandit. Curabitur sed diam odio. Donec lobortis id lacus quis bibendum. Duis vitae lacus ac turpis laoreet mattis eget non est. Aliquam tristique porttitor ullamcorper. Praesent orci justo, mattis nec commodo vitae, iaculis vel leo.
+                      </div>
+                      <div class="col-lg-4 text-right ml-auto">
+                        Elon Musk <small>57 minutes ago</small>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane text-center gallery" id="photos">
+          <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <div class="row">
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://66.media.tumblr.com/45a28fbddc5b75da42ddc8674002399f/tumblr_osip4zQBfe1qh6pbfo1_1280.jpg" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/2d36e011323a4a3dcbb17bef942ba2bc.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/05863dfeaa07e2512e43f05a6410cf88.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/029cfbdf0b5edc1d9ad73aec40713fe5.jpg" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/9417df045186cade42d801ee0162d337.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/ac3172e2d2053bdc4f76f1ad7e5423c2.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/53bbfe113fbd7e8121aeab5b02f5c280.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/2b9dfb9eb6e31690f1dc4f763a37883a.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/1b9115974b4ca391c88d87568cbad7cc.jpg" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/a81c1daeec39faca9f9f2536848f1748.jpg" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/ce287212562dd9fc571254fb676e94cb.png" style="width: 100%">
+                </div>
+                <div class="col-md-3">
+                  <img class="rounded border border-3 border-purple mb-3" src="https://i.gyazo.com/443c80a5548633b65c03a4219a5813a2.png" style="width: 100%">
+                </div>
+              </div>
+            </div>
+            <div class="fix-to-bottom">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    
+    <!-- <div class="main main-raised bottom-margin">
+      <div class="row mx-auto">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="card-title font-lato text-uppercase ml-3">My Pets</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Mr. Kitty<br style="line-height:0px;" /><small class="ml-2"><small>Domestic Shorthair</small></small></h3>
+            </div>
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Roofus<br style="line-height:0px;" /><small class="ml-2"><small>Golden Retriever</small></small></h3>
+            </div>
+            <div class="col-lg-3 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Polly<br style="line-height:0px;" /><small class="ml-2"><small>Parakeet</small></small></h3>
+            </div>
+            <div class="fix-to-bottom">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main main-raised mb-5">
+      <div class="row mx-auto">
+        <div class="col-lg-12">
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="card-title font-lato text-uppercase ml-3">Communities I Belong To</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Dog Food<br style="line-height:0px;" /><small class="ml-2"><small>Oakland, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Jog Dogs SF<br style="line-height:0px;" /><small class="ml-2"><small>San Francisco, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Birb Cage<br style="line-height:0px;" /><small class="ml-2"><small>Berkeley, CA</small></small></h3>
+            </div>
+            <div class="col-lg-2 mt-3 mr-4 ml-4 text-center">
+              <img class="rounded border border-3 border-light" src="https://via.placeholder.com/300" style="width: 100%">
+              <h3 class="mb-3">Cats in Hats<br style="line-height:0px;" /><small class="ml-2"><small>Global</small></small></h3>
+            </div>
+            <div class="fix-to-bottom">
+              <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+    <footer class="footer fixed-footer">
+      <div class="container">
+        <nav class="float-left">
+          <ul>
+            <li>
+              <a href="#">
+                About Us
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                GitHub Repo
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="copyright float-right font-roboto text-uppercase"><small class="font-white">
+          &copy;
+          <script>
+            document.write(new Date().getFullYear())
+          </script>, Petstagram.</small>
+        </div>
+      </div>
+    </footer>
+
   </div>
-</div>
