--- a/views/partials/pets/pet-block.handlebars
+++ b/views/partials/pets/pet-block.handlebars
@@ -1,5 +1,5 @@
-<div class="col-md-3 mx-auto my-auto float-left">
+<div class="col-md-3 mx-3 my-auto float-left">
     <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./pet/{{id}}" data-original-title="{{name}}">
-    <img class="rounded border border-3 border-purple mb-3" src="{{profPic}}" style="width: 100%">
+    <img class="rounded border border-3 border-purple mb-3" src="{{profPic}}" style="width: 200px">
     </a>
 </div>
