Community handlebars mostly functional (for firebase testing)

--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -100,30 +100,8 @@
       <div class="tab-content tab-space">
         <div class="tab-pane text-center gallery col-lg-10 mx-auto" id="members">
           <div class="row">
-            <div class="col-md-3 mx-auto my-auto">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Jessica M.">
-                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/avatar.jpg" style="width: 100%">
-              </a>
-            </div>
-            <div class="col-md-3 mx-auto my-auto">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Elizabeth O.">
-                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/camp.jpg" style="width: 100%">
-              </a>
-            </div>
-            <div class="col-md-3 mx-auto my-auto">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="John S.">
-                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/card-profile1-square.jpg" style="width: 100%">
-              </a>
-            </div>
-            <div class="col-md-3 mx-auto my-auto">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Randal L.">
-                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/card-profile2-square.jpg" style="width: 100%">
-              </a>
-            </div>
-            <div class="col-md-3 mx-auto my-auto">
-              <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="./user-page.html" data-original-title="Christian A.">
-                <img class="rounded border border-3 border-purple mb-3" src="./assets/img/faces/christian.jpg" style="width: 100%">
-              </a>
+            <div id="members-container">
+              members-container
             </div>
           </div>
         </div>
@@ -152,30 +130,9 @@
                     </button>
                   </div>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item border rounded mt-3">
-                      <div class="col-lg-7 text-left">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eu consectetur massa. Phasellus nec velit semper libero commodo vulputate quis sit amet orci. Integer vitae mi lacus. Morbi semper pretium nunc, condimentum pretium metus laoreet ut.
-                      </div>
-                      <div class="col-lg-4 text-right ml-auto">
-                        John Smith <small>30 minutes ago</small>
-                      </div>
-                    </li>
-                    <li class="list-group-item border rounded mt-3">
-                      <div class="col-lg-7 text-left">
-                        Nam at est euismod justo tincidunt sagittis sit amet eget massa. Suspendisse cursus diam sem, quis cursus neque cursus et. Aliquam euismod nulla id libero accumsan, et ullamcorper odio pulvinar. Etiam aliquet urna non tellus mollis condimentum. Donec porttitor rutrum ligula nec tristique.
-                      </div>
-                      <div class="col-lg-4 text-right ml-auto">
-                        Jane Doe <small>45 minutes ago</small>
-                      </div>
-                    </li>
-                    <li class="list-group-item border rounded mt-3">
-                      <div class="col-lg-7 text-left">
-                        Aenean bibendum metus sit amet libero imperdiet, in aliquet mi blandit. Curabitur sed diam odio. Donec lobortis id lacus quis bibendum. Duis vitae lacus ac turpis laoreet mattis eget non est. Aliquam tristique porttitor ullamcorper. Praesent orci justo, mattis nec commodo vitae, iaculis vel leo.
-                      </div>
-                      <div class="col-lg-4 text-right ml-auto">
-                        Elon Musk <small>57 minutes ago</small>
-                      </div>
-                    </li>
+                    <div id="message-container">
+                      message-container
+                    </div>
                   </ul>
                 </div>
               </div>
