Modify API routing to include communities (from Orions code) for  api/users and api/user/#

--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -63,9 +63,7 @@
           <div class="row">
             <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
               <img class="mb-3 rounded-circle border border-purple" src="https://www.bterrier.com/wp-content/uploads/2012/12/dog-in-hand-with-knit-frog-hat.jpg" style="width: 100%; border-width: 4px !important;">
-              <a href="#pablo" class="btn btn-primary mr-3"><i class="fa fa-envelope"></i></a>
-              <a href="#pablo" class="btn btn-primary"><i class="fa fa-address-card"></i></a>
-              <a href="#pablo" class="btn btn-primary"><i class="fas fa-user-plus"></i></a>
+              <a href="#" id="join-community" data-id="{{id}}" class="btn btn-primary btn-link btn-wd btn-lg">Join Community</a>
             </div>
             <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
               <h2>{{comm.name}}<small class="ml-2"><small>{{comm.location}}</small></small></h2>
