Modify htmlRoutes and apiRoutes to list communities belonged to on user profile

--- a/views/partials/userCommunities/userCommunity-block.handlebars
+++ b/views/partials/userCommunities/userCommunity-block.handlebars
@@ -1,5 +1,7 @@
-<div class="col-md-3 mx-auto my-auto float-left">
-    <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./comm/{{id}}" data-original-title="{{name}}">
+{{!-- <div class="col-md-3 mx-auto my-auto float-left"> --}}
+  <li>
+    <a class="btn btn-primary btn-link btn-wd btn-lg" href="./comm/{{id}}">
     {{name}}
     </a>
-</div>
+  </li>
+{{!-- </div> --}}
