--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -70,7 +70,6 @@
           <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
             <h2>{{user.name}} <small class="ml-2"><small>{{user.location}}</small></small></h2>
             <p> {{user.bio}} </p>
-            <p> {{user.id}}</p>
           </div>
         </div>
       </div>
@@ -102,9 +101,11 @@
       <div class="tab-pane active text-center gallery col-lg-10 mx-auto" id="pets">
         <div class="row">
           <div id="pets-container">
-            {{#each user.Pets}}
-              {{> pets/pet-block}}
-            {{/each}}
+            <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
+              {{#each user.Pets}}
+                {{> pets/pet-block}}
+              {{/each}}
+            </ul>
           </div>
           {{!-- <div class="fix-to-bottom">
             <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
@@ -115,9 +116,11 @@
       <div class="tab-pane text-center gallery col-lg-10 mx-auto" id="communities">
         <div class="row">
           <div id="communities-container">
-            {{#each user.Communities}}
-              {{> userCommunities/userCommunity-block}}
-            {{/each}}
+            <ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
+              {{#each user.Communities}}
+                {{> userCommunities/userCommunity-block}}
+              {{/each}}
+            </ul>
           </div>
           <div class="fix-to-bottom">
             <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
