--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,13 +18,15 @@
   <link href="../../assets/css/material-kit.css?v=2.0.5" rel="stylesheet" />
   <link href="../../assets/css/style.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Pacifico|Roboto" rel="stylesheet">
+
 </head>
 
 <body>
   {{{body}}}
 </body>
 
-
+<!-- FIREBASE -->
+  <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
 
 <!--   Core JS Files   -->
 <script src="../../assets/js/core/jquery.min.js" type="text/javascript"></script>
@@ -39,6 +41,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 <script src="../../assets/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
+   <script src="../../assets/js/community-page.js"></script>
 <script>
   $(document).ready(function() {
       //init DateTimePickers
