--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
         <li class="dropdown nav-item">
-          <a href="./user-page.html" class="nav-link">
+          <a href="/" class="nav-link">
             <i class="material-icons">face</i> My Profile
           </a>
         </li>
