--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -71,7 +71,7 @@
                   <button type="submit" class="btn btn-light btn-fab btn-raised btn-round">
                     <i class="material-icons">insert_emoticon</i>
                   </button>
-                  <button type="submit" class="btn testing btn-primary btn-raised btn-round float-right">
+                  <button type="submit" id="send-message" class="btn btn-primary btn-raised btn-round float-right">
                     <i class="material-icons mr-1">insert_comment</i> Submit
                   </button>
                 </div>
