--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -42,7 +42,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="/login-page.html">
+            <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="/logout">
                 <i class="fas fa-sign-out-alt"></i> Sign Out
             </a>
           </li>
