Refactor nav partial to main.handlebars from individual page *.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,8 @@
 </head>
 
 <body>
+  {{> nav/nav-block}}
+
   {{{body}}}
 </body>
 
@@ -119,5 +121,11 @@ var messageScroll = $('#message-container')
   });
     
 </script>
+<script>var userid
+$.get("/api/thisuser", 
+function(data) {
+  userId = data.id
+  console.log(userId)
+})</script>
 
 </html>
