Changes to pet profile > my photos, to show likes beneath photos, removed hover-over functionality. Changed community-page.js from minutes to hours, small styling changes

--- a/views/partials/petPhotos/petPhoto-block.handlebars
+++ b/views/partials/petPhotos/petPhoto-block.handlebars
@@ -1,5 +1,7 @@
 <div class="col-md-3 mx-auto my-auto float-left">
-    <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./pet/{{id}}" data-original-title="{{likes}} likes">
+    {{!-- <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./pet/{{id}}" data-original-title="{{likes}} likes"> --}}
     <img class="rounded border border-3 border-purple mb-3" src="{{url}}" style="width: 100%">
-    </a>
+    {{!-- </a> --}}
+    <a href="#" class="remove-mt mx-auto btn btn-primary btn-link">like</a>
+    <a href="#" ><p class="mr-4 float-right" style="margin-top: -7px;">{{likes}} likes</p></a>
 </div>
