--- a/views/partials/nav/nav-block.handlebars
+++ b/views/partials/nav/nav-block.handlebars
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand font-pacifico" href="#"> <i class="fas fa-paw"></i>
-          Petstagram </a>
+          Pawstagram </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="navbar-toggler-icon"></span>
