--- a/views/pettest.handlebars
+++ b/views/pettest.handlebars
@@ -1,8 +1,35 @@
 <div id="home">
   <div class="container">
     <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
+      <div class="col-lg-10 mx-auto">
+        <div class="card">
+
+          <form class="new-pet" action="POST">
+            <div class="form-group">
+              <label for="pet-user">pet-user</label>
+              <input type="text" id="pet-user" class="form-control" aria-describedby="pet-user" placeholder="pet-user">
+            </div>
+            <div class="form-group">
+              <label for="pet-name">pet-name</label>
+              <input type="text" id="pet-name" class="form-control" aria-describedby="pet-name" placeholder="pet-name">
+            </div>
+            <div class="form-group">
+              <label for="pet-species">pet-species</label>
+              <input type="text" id="pet-species" class="form-control" aria-describedby="pet-species" placeholder="pet-species">
+            </div>
+            <div class="form-group">
+              <label for="pet-age">pet-age</label>
+              <input type="text" id="pet-age" class="form-control" aria-describedby="pet-age" placeholder="pet-age">
+            </div>
+            <div class="form-group">
+              <label for="pet-prof-pic">pet-prof-pic</label>
+              <input type="text" id="pet-prof-pic" class="form-control" aria-describedby="pet-prof-pic" placeholder="pet-prof-pic">
+            </div>
+            <button id="submit2" class="btn btn-primary float-right">Submit2</button>
+          </form>
+          
+        </div>
+        {{!-- <h1>{{msg}}</h1>
         <h2>Testing Page!</h2>
 
         <h3>Pets:</h3>
@@ -13,31 +40,8 @@
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
-        </ul>
+        </ul> --}}
 
-        <form class="new-pet" action="POST">
-          <div class="form-group">
-            <label for="pet-user">pet-user</label>
-            <input type="text" id="pet-user" class="form-control" aria-describedby="pet-user" placeholder="pet-user">
-          </div>
-          <div class="form-group">
-            <label for="pet-name">pet-name</label>
-            <input type="text" id="pet-name" class="form-control" aria-describedby="pet-name" placeholder="pet-name">
-          </div>
-          <div class="form-group">
-            <label for="pet-species">pet-species</label>
-            <input type="text" id="pet-species" class="form-control" aria-describedby="pet-species" placeholder="pet-species">
-          </div>
-          <div class="form-group">
-            <label for="pet-age">pet-age</label>
-            <input type="text" id="pet-age" class="form-control" aria-describedby="pet-age" placeholder="pet-age">
-          </div>
-          <div class="form-group">
-            <label for="pet-prof-pic">pet-prof-pic</label>
-            <input type="text" id="pet-prof-pic" class="form-control" aria-describedby="pet-prof-pic" placeholder="pet-prof-pic">
-          </div>
-          <button id="submit2" class="btn btn-primary float-right">Submit2</button>
-        </form>
       </div>
     </div>
   </div>
