--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -123,5 +123,10 @@ var messageScroll = $('#message-container')
   });
     
 </script>
-
+<script>var userId
+$.get("/api/thisuser", 
+function(data) {
+  userId = data.id
+  console.log(userId)
+})</script>
 </html>
