Commented out google maps api to reduce console errors until future functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -127,6 +127,6 @@ var messageScroll = $('#message-container')
 $.get("/api/thisuser", 
 function(data) {
   userId = data.id
-  console.log(userId)
+  {{!-- console.log(userId) --}}
 })</script>
 </html>
