--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -4,7 +4,7 @@
       <div class="col-lg-12">
         <div class="row">
           <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
-            <img class="mb-3 rounded-circle border border-purple" src="https://www.bterrier.com/wp-content/uploads/2012/12/dog-in-hand-with-knit-frog-hat.jpg" style="width: 100%; border-width: 4px !important;">
+            <img class="mb-3 rounded-circle border border-purple" src="{{comm.photoUrl}}" style="width: 100%; border-width: 4px !important;">
             <a href="#" id="join-community" data-id="{{id}}" class="btn btn-primary btn-link btn-wd btn-lg">Join Community</a>
           </div>
           <div class="col-lg-8 mt-3 mr-3 ml-3 mb-3">
