allowed updating user info and made page for doing so

--- a/views/myprofile.handlebars
+++ b/views/myprofile.handlebars
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-lg-3 mt-3 mr-3 ml-3 mb-3 text-center">
             <img class="mb-3 rounded-circle border border-purple" src="{{user.userPhotoUrl}}" style="width: 100%; border-width: 4px !important;">
-            <a href="#pablo" class="btn btn-primary mr-3"><i class="fas fa-user-edit mr-2"></i>EDIT MY PROFILE</a>
+            <a href="/useredit" class="btn btn-primary mr-3"><i class="fas fa-user-edit mr-2"></i>EDIT MY PROFILE</a>
             {{!-- <a href="#pablo" class="btn btn-primary"><i class="fa fa-address-card"></i></a>
             <a href="#pablo" class="btn btn-primary"><i class="fas fa-user-plus"></i></a> --}}
           </div>
