page to add pet photos and almost working for adding them

--- a/views/petprofile.handlebars
+++ b/views/petprofile.handlebars
@@ -38,6 +38,11 @@
               <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
             </div> --}}
           </div>
+                  <div class="row">
+          <div class="col-lg-11 mx-auto">
+            <a href="/newpetphoto" class="btn btn-info mb-3 btn-wd btn-lg">Add New Pet Photo</a>
+          </div>
+        </div>
         </div>
       </div>
     </div>
