added delete button but can't get jquery to target it

--- a/views/partials/petPhotos/petPhoto-block.handlebars
+++ b/views/partials/petPhotos/petPhoto-block.handlebars
@@ -2,6 +2,7 @@
     {{!-- <a class="nav-link" rel="tooltip" title="" data-placement="top" href="./pet/{{id}}" data-original-title="{{likes}} likes"> --}}
     <img class="rounded border border-3 border-purple mb-3" src="{{url}}" style="width: 100%">
     {{!-- </a> --}}
+    <button class="btn btn-light border border-secondary bg-info text-white delete-picture m-1" data-id="{{id}}">Delete</button>
     <a href="#" class="remove-mt mx-auto btn btn-primary btn-link">like</a>
     <a href="#" ><p class="mr-4 float-right" style="margin-top: -7px;">{{likes}} likes</p></a>
 </div>
