Small fixes to seeds.sql for pet photos to work, add photo form fixed

--- a/views/petprofile.handlebars
+++ b/views/petprofile.handlebars
@@ -38,21 +38,19 @@
                 <a href="#pablo" class="btn btn-primary btn-link btn-wd btn-lg">see all...</a>
               </div> --}}
             </div>
-            <div class="row">
-              <div class="col-lg-11 mx-auto">
-              </div>
-            </div>
           </div>
-          <div class="row">
-            <h2 class="text-center">Enter a URL below to add a photo for this pet:</h2>
-            <form class="new-pet" style="width: 100%;" action="POST">
-              <div class="form-group">
-                <label for="pet-photo-url" class="bmd-label-floating">Pet Photo URL:</label>
-                <input type="text" id="pet-photo-url" class="form-control" aria-describedby="pet-photo-url" placeholder="">
-              </div>
-              <button id="submit" class="btn btn-primary float-right">Submit</button>
-            </form>
-            <a href="/user"><button id="cancel" href="/user" style="margin-top: -65px;" class="btn btn-dark float-left">Cancel</button></a>
+          <div class="row mx-auto">
+            <h3 class="text-center mx-auto">Enter a URL below to add a photo for this pet:</h3>
+            <div class="col-lg-11 mx-auto mb-3">
+              <form class="new-pet" style="width: 100%;" action="POST">
+                <div class="form-group">
+                  <label for="pet-photo-url" class="bmd-label-floating">Pet Photo URL:</label>
+                  <input type="text" id="pet-photo-url" class="form-control" aria-describedby="pet-photo-url" placeholder="">
+                </div>
+                <button id="submit" class="btn btn-primary float-right">Submit</button>
+              </form>
+              <a href="/user"><button id="cancel" href="/user" style="margin-top: -0px;" class="btn btn-dark float-left">Cancel</button></a>
+            </div>
           </div>
         </div>
       </div>
