--- a/views/comm.handlebars
+++ b/views/comm.handlebars
@@ -132,3 +132,7 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
+<script src="/assets/js/community-page.js"></script>
